--- a/continents/africa.html
+++ b/continents/africa.html
@@ -299,10 +299,8 @@
                 </div>
 			</div>
 		</div>
-
-            
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 max-w-6xl mx-auto mt-24 gap-4 px-4">
-            <!-- COMPANY 1 -->
+		
+        <div class="grid grid-cols-3 max-w-6xl mx-auto mt-24 gap-4">
             <a href="../companies-africa/South African Post Office.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="../assets/picture-africa/postoffice.png" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
@@ -311,7 +309,6 @@
                 </div>
             </a>
 
-            <!-- COMPANY 2 -->
             <a href="../companies-africa/City Power.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="../assets/picture-africa/city1.png" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
@@ -320,7 +317,6 @@
                 </div>
             </a>
 
-            <!-- COMPANY 3 -->
             <a href="../companies-africa/Transnet.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="../assets/picture-africa/Transnet.jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
@@ -329,7 +325,6 @@
                 </div>
             </a>
 
-            <!-- COMPANY 4 -->
             <a href="../companies-africa/Libya Telecom & Technology.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="../assets/picture-africa/LibyaTelecom.png" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
@@ -338,7 +333,6 @@
                 </div>
             </a>
 
-            <!-- COMPANY 5 -->
             <a href="../companies-africa/Kenya Revenue Authority.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="../assets/picture-africa/kenya1.png" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
@@ -346,8 +340,8 @@
                     <p class="text-white text-lg font-semibold">Kenya Revenue Authority</p>
                 </div>
             </a>
-        </div>
 
+        </div>
 		
 
 		<footer class="text-white w-full p-4 md:mt-24 mt-10">
