--- a/companies-africa/Libya Telecom & Technology.html
+++ b/companies-africa/Libya Telecom & Technology.html
@@ -337,6 +337,20 @@
 
                 </p>
             </div>
+
+            <div>
+                <details class="rounded border shadow" open>
+                    <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+                    References
+                    </summary>
+                    <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+                    <ul class="list-disc list-inside space-y-1">
+                        <li>The Libya Observer. (2023, August 3). LTT suffers major cyberattack, internet services disrupted. https://libyaobserver.ly/news/libya-telecom-technology-hit-cyberattack</li>
+                        <li>BleepingComputer. (2023). Hackers target Libya’s largest internet provider. https://www.bleepingcomputer.com/news/security/libya-telecom-technology-targeted-in-cyberattack/</li>
+                    </ul>
+                    </div>
+                </details>
+            </div>
         </div>
 		
 		
