--- a/companies-africa/Kenya Revenue Authority.html
+++ b/companies-africa/Kenya Revenue Authority.html
@@ -337,6 +337,20 @@
 
                 </p>
             </div>
+
+            <div>
+                <details class="rounded border shadow" open>
+                    <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+                    References
+                    </summary>
+                    <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+                    <ul class="list-disc list-inside space-y-1">
+                        <li>The Standard Kenya. (2022, September 20). KRA hit by cyberattack compromising services. https://www.standardmedia.co.ke/business/technology/article/2001456114/kra-hit-by-cyberattack</li>
+                        <li>Business Daily Africa. (2022, September 21). Cyber attack on KRA systems slows tax services. Retrieved from https://www.businessdailyafrica.com/bd/economy/cyber-attack-on-kra-systems-slows-tax-services-3954102</li>
+                    </ul>
+                    </div>
+                </details>
+            </div>
         </div>
 		
 		
