--- a/companies-africa/Transnet.html
+++ b/companies-africa/Transnet.html
@@ -337,6 +337,20 @@
                 <h5 class="text-xl font-medium">Transnet and the South African economy suffered greatly as a result of the ransomware attack. Delivery of products, especially necessary imports, was severely delayed due to cargo backlogs at major ports. Due to the inability to function normally, Transnet declared force majeure and suspended a number of contracts. The incident hurt the company's operating confidence, affected trade partners, and resulted in millions of dollars in losses. Delivery delays and shortages resulted from the impact on consumers, shipping firms, and shops. The incident brought critical infrastructure's cyber vulnerability to the attention of the country. Transnet started working to strengthen its cybersecurity posture after the incident, which included segmenting its networks and updating software. The hack turned into an example of how critical services require cyber resilience to avoid economic disruption.
                 </p>
             </div>
+
+            <div>
+                <details class="rounded border shadow" open>
+                    <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+                    References
+                    </summary>
+                    <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+                    <ul class="list-disc list-inside space-y-1">
+                        <li>Timcke, S., & Rens, A. (2024, January 11). Bolstering South Africa’s Cyber Defenses: Policy Lessons from the 2021 Transnet Breach. Tech Policy Press. https://www.techpolicy.press/bolstering-south-africas-cyber-defenses-policy-lessons-from-the-2021-transnet-breach/</li>
+                        <li>Maritime ransomware | Blank Rome LLP. (2023, March 1).https://www.blankrome.com/publications/maritime-ransomware</li>
+                    </ul>
+                    </div>
+                </details>
+            </div>
         </div>
 		
 		
