update the Accordion and add reffernces

--- a/companies-africa/Kenya Revenue Authority.html
+++ b/companies-africa/Kenya Revenue Authority.html
@@ -333,10 +333,13 @@
                 <h5 class="text-xl font-medium">KRA's Internal Operational Data</h5>
                 <p class="pl-4">- In addition to taxpayer data, the attack also affected KRA's internal operational data and communications. This disruption hindered the organization's ability to carry out its functions effectively, leading to delays in tax processing and revenue collection. The loss of access to internal systems also impacted staff productivity and coordination. The incident highlighted the critical importance of securing not only customer-facing systems but also internal operational infrastructure.</p>
 
-                <h5 class="text-xl font-medium">The impact of the cyberattack on KRA and its stakeholders was extensive. The organization suffered financial losses, reputational harm, and operational interruptions as a result of the breach. Businesses, taxpayers, and government revenue collection were all impacted by the brief service disruption. Public confidence in KRA's capacity to protect private data and ensure service continuity was damaged by the incident. KRA responded by strengthening its cybersecurity framework through personnel training, technology upgrades, and the adoption of stronger security measures. The intrusion served as a wake-up call for other government agencies and companies to examine and upgrade their cybersecurity postures. In order to safeguard public services and vital infrastructure, it also underlined the necessity of a coordinated national cybersecurity strategy.
-
-                </p>
             </div>
+
+            <div class="space-y-4" id="impact">
+                <h4 class="text-3xl font-medium text-purple-300">Impact on the Company and Customers</h4>
+                <p class="text-justify">The impact of the cyberattack on KRA and its stakeholders was extensive. The organization suffered financial losses, reputational harm, and operational interruptions as a result of the breach. Businesses, taxpayers, and government revenue collection were all impacted by the brief service disruption. Public confidence in KRA's capacity to protect private data and ensure service continuity was damaged by the incident. KRA responded by strengthening its cybersecurity framework through personnel training, technology upgrades, and the adoption of stronger security measures. The intrusion served as a wake-up call for other government agencies and companies to examine and upgrade their cybersecurity postures. In order to safeguard public services and vital infrastructure, it also underlined the necessity of a coordinated national cybersecurity strategy.</p>
+            </div>
+
 
             <div>
                 <details class="rounded border shadow" open>
