--- a/companies-africa/Libya Telecom & Technology.html
+++ b/companies-africa/Libya Telecom & Technology.html
@@ -333,10 +333,13 @@
                 <h5 class="text-xl font-medium">Operational Data</h5>
                 <p class="pl-4">- Although the primary goal of the DDoS attacks was to disrupt services, there was a chance that system vulnerabilities could expose sensitive operational data, and the absence of strong security measures could allow attackers to gain unauthorized access to internal systems, which could compromise sensitive data, including user data and internal communications. The extent of data exposure is still unknown because of the lack of transparency and reporting mechanisms.</p>
 
-                <h5 class="text-xl font-medium">The cyberattacks had significant repercussions for both LTT and its customers. For the corporation, the attacks showed major gaps in its cybersecurity architecture, mandating immediate investments in system improvements and security processes. The disruptions also lead to a loss of client trust and potential financial losses owing to service outages. Conversely, customers encountered difficulties in carrying out business operations, communicating clearly, and gaining access to necessary services. A number of industries were impacted by the unreliability of internet connections, which had a wider effect on the national economy. The incidents emphasized the significance of having a comprehensive national cybersecurity plan to protect vital infrastructure. Increased international cooperation has been demanded in response in order to improve Libya's cybersecurity capabilities and resistance to potential threats.
-
-                </p>
             </div>
+
+            <div class="space-y-4" id="impact">
+                <h4 class="text-3xl font-medium text-purple-300">Impact on the Company and Customers</h4>
+                <p class="text-justify">The cyberattacks had significant repercussions for both LTT and its customers. For the corporation, the attacks showed major gaps in its cybersecurity architecture, mandating immediate investments in system improvements and security processes. The disruptions also lead to a loss of client trust and potential financial losses owing to service outages. Conversely, customers encountered difficulties in carrying out business operations, communicating clearly, and gaining access to necessary services. A number of industries were impacted by the unreliability of internet connections, which had a wider effect on the national economy. The incidents emphasized the significance of having a comprehensive national cybersecurity plan to protect vital infrastructure. Increased international cooperation has been demanded in response in order to improve Libya's cybersecurity capabilities and resistance to potential threats.</p>
+            </div>
+
 
             <div>
                 <details class="rounded border shadow" open>
