--- a/companies-africa/South African Post Office.html
+++ b/companies-africa/South African Post Office.html
@@ -333,9 +333,13 @@
                 <h5 class="text-xl font-medium">Financial Information</h5>
                 <p class="pl-4">- Transaction histories and bank account information were also compromised, along with personal data. The bank suffered financial losses as a result of the criminals' ability to carry out illegal operations. Customers' faith in Postbank's ability to protect their funds was further damaged by the disclosure of such financial information. Additionally, it emphasized how susceptible financial organizations could be to internal attacks.</p>
 
-                <h5 class="text-xl font-medium">The impact of the hack on Postbank and its clients was significant. The bank lost more than R56 million as a result of fraudulent transactions. The requirement to replace 12 million bank cards presented logistical and operational difficulties. Customers lost faith in the bank as a result of the occurrence, which hurt its reputation. Consumers had to deal with the worry of possible identity theft as well as the inconvenience of having to replace their cards. The hack has led to calls for the bank to strengthen its security and regulatory inspections. Postbank responded by working to improve its internal security procedures and monitoring systems.
-                </p>
             </div>
+
+            <div class="space-y-4" id="impact">
+                <h4 class="text-3xl font-medium text-purple-300">Impact on the Company and Customers</h4>
+                <p class="text-justify">The impact of the hack on Postbank and its clients was significant. The bank lost more than R56 million as a result of fraudulent transactions. The requirement to replace 12 million bank cards presented logistical and operational difficulties. Customers lost faith in the bank as a result of the occurrence, which hurt its reputation. Consumers had to deal with the worry of possible identity theft as well as the inconvenience of having to replace their cards. The hack has led to calls for the bank to strengthen its security and regulatory inspections. Postbank responded by working to improve its internal security procedures and monitoring systems.</p>
+            </div>
+
 
             <div>
                 <details class="rounded border shadow" open>
