--- a/companies-africa/City Power.html
+++ b/companies-africa/City Power.html
@@ -332,10 +332,14 @@
 
                 <h5 class="text-xl font-medium">Customer Account and Billing Information</h5>
                 <p class="pl-4">- The ransomware attack also impacted customer account and billing information. Consumers had trouble accessing their account information and buying electrical units. The possibility of financial theft and privacy issues are brought up by the compromise of this data. Utility companies need to put protections in place to keep consumer data safe from online attacks.</p>
-
-                <h5 class="text-xl font-medium">The impact of the ransomware attack on City Power and its clients was immediate and noticeable. Both residential and commercial regions experienced power outages as a result of operational interruptions. The inability of customers to buy electricity caused a great deal of discontent. The utility's IT infrastructure was reviewed after the event revealed its cybersecurity flaws. Due to service outages, City Power could lose money and suffer reputational harm. The incident acted as a warning to the utilities industry to give cybersecurity top priority. City Power responded by taking action to fortify its defenses against potential cyberattacks.
-                </p>
+                
             </div>
+
+            <div class="space-y-4" id="impact">
+                <h4 class="text-3xl font-medium text-purple-300">Impact on the Company and Customers</h4>
+                <p class="text-justify">The impact of the ransomware attack on City Power and its clients was immediate and noticeable. Both residential and commercial regions experienced power outages as a result of operational interruptions. The inability of customers to buy electricity caused a great deal of discontent. The utility's IT infrastructure was reviewed after the event revealed its cybersecurity flaws. Due to service outages, City Power could lose money and suffer reputational harm. The incident acted as a warning to the utilities industry to give cybersecurity top priority. City Power responded by taking action to fortify its defenses against potential cyberattacks.</p>
+            </div>
+
 
             <div>
                 <details class="rounded border shadow" open>
