--- a/companies-africa/Transnet.html
+++ b/companies-africa/Transnet.html
@@ -333,10 +333,13 @@
 
                 <h5 class="text-xl font-medium">Employee Information</h5>
                 <p class="pl-4">- Employee information, including names, ID numbers, and contact details, may have been compromised in addition to operational systems. This sparked worries about possible identity theft and improper use of private data. Internal staff systems were among those affected, however Transnet would not officially disclose the scope of the data leak. This demonstrated how crucial it is for breach response procedures to safeguard internal staff and customer data.</p>
-
-                <h5 class="text-xl font-medium">Transnet and the South African economy suffered greatly as a result of the ransomware attack. Delivery of products, especially necessary imports, was severely delayed due to cargo backlogs at major ports. Due to the inability to function normally, Transnet declared force majeure and suspended a number of contracts. The incident hurt the company's operating confidence, affected trade partners, and resulted in millions of dollars in losses. Delivery delays and shortages resulted from the impact on consumers, shipping firms, and shops. The incident brought critical infrastructure's cyber vulnerability to the attention of the country. Transnet started working to strengthen its cybersecurity posture after the incident, which included segmenting its networks and updating software. The hack turned into an example of how critical services require cyber resilience to avoid economic disruption.
-                </p>
             </div>
+
+            <div class="space-y-4" id="impact">
+                <h4 class="text-3xl font-medium text-purple-300">Impact on the Company and Customers</h4>
+                <p class="text-justify">Transnet and the South African economy suffered greatly as a result of the ransomware attack. Delivery of products, especially necessary imports, was severely delayed due to cargo backlogs at major ports. Due to the inability to function normally, Transnet declared force majeure and suspended a number of contracts. The incident hurt the company's operating confidence, affected trade partners, and resulted in millions of dollars in losses. Delivery delays and shortages resulted from the impact on consumers, shipping firms, and shops. The incident brought critical infrastructure's cyber vulnerability to the attention of the country. Transnet started working to strengthen its cybersecurity posture after the incident, which included segmenting its networks and updating software. The hack turned into an example of how critical services require cyber resilience to avoid economic disruption.</p>
+            </div>
+
 
             <div>
                 <details class="rounded border shadow" open>
