--- a/financial-impact-of-breaches.html
+++ b/financial-impact-of-breaches.html
@@ -321,14 +321,19 @@
                 <h4 class="text-3xl font-medium text-purple-300">Loss of Revenue and Business Disruption</h4>
                 <h5 class="text -xl">Breaches often force companies to shut down parts of their operations, resulting in lost sales and productivity. IBM’s report showed that lost business represents the largest share of the total breach cost. Customers may stop using the company’s services out of fear, leading to revenue loss and brand damage. While trying to recover, companies must also spend large amounts on public relations, system upgrades, and staff training. These added expenses, combined with lost revenue, create serious financial disruption</p>
             </div>
-            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
-                <div id="accordion-header" class="p-4 border-b border-indigo-900">
-                    <h5 class="text-purple-300 font-medium text-lg">References</h5>
-                </div>
-                <div class="p-4">
-                    <p>https://www.metacompliance.com/blog/data-breaches/5-damaging-consequences-of-a-data-breach</p>
-                    <p>https://www.linkedin.com/pulse/financial-impact-data-breaches-2025-alvin-chang-msc-mbcs-7riqe</p>
-                </div>
+
+            <div>
+                <details class="rounded border shadow" open>
+                    <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+                    References
+                    </summary>
+                    <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+                    <ul class="list-disc list-inside space-y-1">
+                        <li>https://www.metacompliance.com/blog/data-breaches/5-damaging-consequences-of-a-data-breach</li>
+                        <li>https://www.linkedin.com/pulse/financial-impact-data-breaches-2025-alvin-chang-msc-mbcs-7riqe</li>
+                    </ul>
+                    </div>
+                </details>
             </div>
         </div>
 		
