--- a/recovery-mitigation-measures.html
+++ b/recovery-mitigation-measures.html
@@ -335,14 +335,20 @@
                 </ul>
 
             </div>
-            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
-                <div id="accordion-header" class="p-4 border-b border-indigo-900">
-                    <h5 class="text-purple-300 font-medium text-lg">References</h5>
-                </div>
-                <div class="p-4">
-                    <p>https://www.ibm.com/reports/data-breach</p>
-                </div>
+
+             <div>
+                <details class="rounded border shadow" open>
+                    <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+                    References
+                    </summary>
+                    <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+                    <ul class="list-disc list-inside space-y-1">
+                        <li>https://www.ibm.com/reports/data-breach</li>
+                    </ul>
+                    </div>
+                </details>
             </div>
+
         </div>
 		
 		
