--- a/future-cyber-threats/biohacking.html
+++ b/future-cyber-threats/biohacking.html
@@ -291,7 +291,7 @@
 
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent via-black/40 to-black"></div>
 			<div class="relative max-w-4xl mx-auto mt-48">
-				<h4 class="text-6xl font-medium">AI in Hacking</h4>
+				<h4 class="text-6xl font-medium">Biohacking and Implant Vulnerabilities</h4>
                 <div class="flex items-center space-x-4 mt-4 justify-center">
                     <a href="">Overview </a>
                     <a href="">How It Works</a>
