I have put all the infos
the only thing missin g here is the responsiveness and if we want to change the backround photos

--- a/future-cyber-threats/decentralized-finance.html
+++ b/future-cyber-threats/decentralized-finance.html
@@ -435,8 +435,8 @@
                 </summary>
                 <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
                 <ul class="list-disc list-inside space-y-1">
-                    <li>Wired Middle East. (2025, April 25). The Great Biohack: The Future of Human Performance. <i>Wired</i>. Retrieved May 13, 2025, from: <br> https://wired.me/technology/the-great-biohack-future-human-performance/</li>
-                    <li>Bhattacharyya, S., & Midya, S. (2018). Internet of Bio-Things: Towards a Cyber-Physical Framework for Next-Generation Healthcare. In <i>2018 IEEE International Conference on Information Technology (ICIT)</i> (pp. 1–5). IEEE. Retrieved May 13, 2025, from: <br> https://ieeexplore.ieee.org/document/8460454</li>
+                    <li>RocketMe Up Cybersecurity. (2024, November 17). Exploring Blockchain Attacks in Web3 and DeFi: How Hackers Are Exploiting Decentralized Finance. <i>Medium</i>. Retrieved May 14, 2025, from:<br>https://medium.com/@RocketMeUpCybersecurity/exploring-blockchain-attacks-in-web3-and-defi-how-hackers-are-exploiting-decentralized-finance-559159d58957</li>
+                    <li>DISB. (n.d.). Beware-Decentralized Finance (DeFi). <i>dc.gov</i>. Retrieved May 14, 2025, from:<br>https://disb.dc.gov/page/beware-decentralized-finance-defi</li>
                 </ul>
                 </div>
             </details>
