update: update on side bar navigation

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                                             <a href="./protective-measure/physical-protective-measure.html">Physical Protective Measure</a>
                                         </li>
                                         <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
-                                            <a href="./protective-measure/software-protective-measures.html">Item 2</a>
+                                            <a href="./protective-measure/software-protective-measures.html">Software Protective Measures</a>
                                         </li>
                                     </ul>
                                 </li>
