fixed continents file structure, fixed breadcrumbs for continent pages, added europe page

--- a/continents/australia-oceania.html
+++ b/continents/australia-oceania.html
@@ -287,11 +287,11 @@
 
 			<div class="mt-10 max-w-7xl mx-auto">
                 <div class="flex items-center text-gray-300 space-x-2">
-                    <a class="text-sm" href="/companies-affected.html">Companies Affected</a>
+                    <a class="text-sm" href="../companies-affected.html">Companies Affected</a>
                     <span class="text-gray-300 text-sm">/</span>
-                    <a href="/famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
+                    <a href="../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
                     <span class="text-gray-300 text-sm">/</span>
-                    <a href="/continents/australia-oceania.html" class="text-sm">Australia/Oceania</a>
+                    <a href="" class="text-sm">Australia Oceania</a>
                 </div>
                 <div class="mt-24 text-center space-y-4 max-w-3xl mx-auto md:px-2 px-4">
                     <h3 class="text-6xl font-semibold">Companies in Australia/Oceania</h3>
