--- a/continents/europe.html
+++ b/continents/europe.html
@@ -3,13 +3,13 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<title>Types of Vulnerabilities</title>
+		<title>Companies in Europe</title>
 		<script src='https://cdn.tailwindcss.com'></script>
 		<link rel="stylesheet" href="../assets/css/fonts.css">
 	</head>
 	<body class="text-white text-roboto">
 		<div class="min-h-screen bg-[#0b0f2a] bg-[radial-gradient(circle_at_top_right,_rgba(0,159,183,0.3)_0%,_transparent_60%),_radial-gradient(circle_at_bottom_left,_rgba(0,159,183,0.3)_0%,_transparent_60%)]">
-		<div id="hero" class="w-full h-dvh relative">
+		<div id="hero" class="w-full relative">
             <nav class="">
                 <div class="w-full p-4 flex items-center justify-between">
                     <div class="flex items-center space-x-4 md:w-auto w-full justify-between">
@@ -285,50 +285,63 @@
                 </div>
             </nav>
 
-			<div class="grid md:grid-cols-2 grid-cols-1 max-w-7xl mx-auto mt-8">
-				<div class="flex items-center justify-center">
-                    <div class="block px-4">
-                        <h4 class="text-6xl font-medium"> <span class="text-[#6366F1]">Types</span> of Vulnerabilities</h4>
-                        <p class="mt-4 text-gray-200">Welcome to the section on Types of Vulnerabilities, where we uncover the hidden weaknesses that cyber attackers often exploit. From software bugs and misconfigurations to human errors and outdated systems, vulnerabilities come in many forms. This page breaks down the most common types, such as SQL injections and cross-site scripting, and explains how they impact system security. Understanding these flaws is the first step toward building safer, more resilient digital environments.</p>
-                        <button class="mt-2 bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Learn More</button>
-                    </div>
-				</div>
-				<div class="flex justify-center mt-8 px-4 md:mt-0">
-					<img src="../assets/hacker.png" alt="Pic" class="md:block hidden max-w-full h-auto">
-				</div>
-                
+			<div class="mt-10 max-w-7xl mx-auto">
+                <div class="flex items-center text-gray-300 space-x-2">
+                    <a class="text-sm" href="../companies-affected.html">Companies Affected</a>
+                    <span class="text-gray-300 text-sm">/</span>
+                    <a href="../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
+                    <span class="text-gray-300 text-sm">/</span>
+                    <a href="" class="text-sm">Europe</a>
+                </div>
+                <div class="mt-24 text-center space-y-4 max-w-3xl mx-auto md:px-2 px-4">
+                    <h3 class="text-6xl font-semibold">Companies in Europe</h3>
+                    <p class="text-lg text-gray-200">Welcome to our showcase of notable cyberattacks on companies across Europe, highlighting the growing importance of cybersecurity on the continent. These real incidents serve as critical lessons in digital resilience, awareness, and the urgent need for stronger protection measures.</p>
+                </div>
 			</div>
 		</div>
-
 		
-		<div class="">
-			<div class="grid md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-y-8 max-w-6xl mx-auto py-16">
-				<div class="px-4">
-					<img src="https://placehold.co/500x500" class="w-full rounded-t h-64 object-cover" alt="">
-					<div class="space-y-2 bg-[#141528] p-5 rounded-b-lg">
-						<h5 class="font-medium text-2xl">Software Bugs</h5>
-						<p class="text-sm">Software bugs are defects or errors  in a program's code that result in security flaws or unexpected behavior. They frequently happen as a result of miscommunication during development, human error, or a misunderstanding of the requirements.</p>
-						<button class="mt-2 bg-indigo-500 text-sm hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
-					</div>
-				</div>
-                <div class="px-4">
-					<img src="https://placehold.co/500x500" class="w-full h-64 object-cover rounded" alt="">
-					<div class="space-y-2 bg-[#141528] p-5 rounded-b-lg">
-						<h5 class="font-medium text-2xl">Software Bugs</h5>
-						<p class="text-sm">Software bugs are defects or errors in a program's code that result in security flaws or unexpected behavior. They frequently happen as a result of miscommunication during development, human error, or a misunderstanding of the requirements.</p>
-						<button class="mt-2 bg-indigo-500 text-sm hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
-					</div>
-				</div>
-                <div class="px-4">
-					<img src="https://placehold.co/500x500" class="w-full h-64 object-cover rounded" alt="">
-					<div class="space-y-2 bg-[#141528] p-5 rounded-b-lg">
-						<h5 class="font-medium text-2xl">Software Bugs</h5>
-						<p class="text-sm">Software bugs are defects or errors in a program's code that result in security flaws or unexpected behavior. They frequently happen as a result of miscommunication during development, human error, or a misunderstanding of the requirements.</p>
-						<button class="mt-2 bg-indigo-500 text-sm hover:bg-indigo-600 ease duration-200 px-2 py-1 rounded">Learn More</button>
-					</div>
-				</div>
-			</div>
-		</div>
+        <div class="grid grid-cols-3 max-w-6xl mx-auto mt-24 gap-4">
+            <a href="europe/british-airway.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+                <img src="../assets/NK-BA-Landor-Livery-at-DUB-12-of-21.webp" class="w-full h-96 object-cover transition-opacity duration-300">
+                <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
+                <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
+                    <p class="text-white text-lg font-semibold">British Airways</p>
+                </div>
+            </a>
+
+            <a href="europe/merck.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+                <img src="../assets/merck-2.svg" class="w-full h-96 object-cover transition-opacity duration-300">
+                <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
+                <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
+                    <p class="text-white text-lg font-semibold">Merck</p>
+                </div>
+            </a>
+
+            <a href="europe/national-health-service.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+                <img src="../assets/NHS-sign.jpg" class="w-full h-96 object-cover transition-opacity duration-300">
+                <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
+                <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
+                    <p class="text-white text-lg font-semibold">National Health Services</p>
+                </div>
+            </a>
+
+            <a href="europe/travelex.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+                <img src="../assets/travelex.jpg" class="w-full h-96 object-cover transition-opacity duration-300">
+                <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
+                <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
+                    <p class="text-white text-lg font-semibold">Travelex</p>
+                </div>
+            </a>
+
+            <a href="europe/vodafone.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+                <img src="../assets/FILES-SPAIN-TELECOM-ECONOMY-EMPLOYMENT-0_1718725994992_1718726006737.avif" class="w-full h-96 object-cover transition-opacity duration-300">
+                <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
+                <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
+                    <p class="text-white text-lg font-semibold">Vodafone</p>
+                </div>
+            </a>
+
+        </div>
 		
 
 		<footer class="text-white w-full p-4 md:mt-24 mt-10">
