--- a/continents/south-america.html
+++ b/continents/south-america.html
@@ -287,16 +287,15 @@
 
 			<div class="mt-10 max-w-7xl mx-auto">
                 <div class="flex items-center text-gray-300 space-x-2">
-                    <a href="/companies-affected.html" class="text-sm">Companies Affected</a>
+                    <a class="text-sm" href="../companies-affected.html">Companies Affected</a>
                     <span class="text-gray-300 text-sm">/</span>
-                    <a href="/famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
+                    <a href="../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
                     <span class="text-gray-300 text-sm">/</span>
-                    <a href="/continents/south-america.html" class="text-sm">South America</a>
+                    <a href="" class="text-sm">South America</a>
                 </div>
                 <div class="mt-24 text-center space-y-4 max-w-3xl mx-auto md:px-2 px-4">
                     <h3 class="text-6xl font-semibold">Companies in South America</h3>
-                    <p class="text-lg text-gray-200">Welcome to our overview of major cyberattacks on companies across South America, where digital threats have increasingly targeted key industries. These incidents underscore the region’s urgent need for robust cybersecurity strategies and greater awareness.
-</p>
+                    <p class="text-lg text-gray-200">Welcome to our overview of major cyberattacks on companies across South America, where digital threats have increasingly targeted key industries. These incidents underscore the region’s urgent need for robust cybersecurity strategies and greater awareness.</p>
                 </div>
 			</div>
 		</div>
