--- a/continents/asia.html
+++ b/continents/asia.html
@@ -287,11 +287,11 @@
 
 			<div class="mt-10 max-w-7xl mx-auto">
                 <div class="flex items-center text-gray-300 space-x-2">
-                    <a class="text-sm" href="#">Companies Affected</a>
+                    <a class="text-sm" href="../companies-affected.html">Companies Affected</a>
                     <span class="text-gray-300 text-sm">/</span>
-                    <a href="#" class="text-sm">Famous Cyber Attacked Companies</a>
+                    <a href="../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
                     <span class="text-gray-300 text-sm">/</span>
-                    <a href="#" class="text-sm">Asia</a>
+                    <a href="" class="text-sm">Asia</a>
                 </div>
                 <div class="mt-24 text-center space-y-4 max-w-3xl mx-auto md:px-2 px-4">
                     <h3 class="text-6xl font-semibold">Companies in Asia</h3>
