--- a/continents/north-america.html
+++ b/continents/north-america.html
@@ -287,16 +287,15 @@
 
 			<div class="mt-10 max-w-7xl mx-auto">
                 <div class="flex items-center text-gray-300 space-x-2">
-                    <a class="text-sm" href="/companies-affected.html">Companies Affected</a>
+                    <a class="text-sm" href="../companies-affected.html">Companies Affected</a>
                     <span class="text-gray-300 text-sm">/</span>
-                    <a href="/famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
+                    <a href="../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
                     <span class="text-gray-300 text-sm">/</span>
-                    <a href="/continents/north-america.html" class="text-sm">North America</a>
+                    <a href="" class="text-sm">North America</a>
                 </div>
                 <div class="mt-24 text-center space-y-4 max-w-3xl mx-auto md:px-2 px-4">
                     <h3 class="text-6xl font-semibold">Companies in North America</h3>
-                    <p class="text-lg text-gray-200">Welcome to our look at significant cyberattacks on companies across North America, a region heavily impacted by sophisticated digital threats. These cases highlight the critical importance of cybersecurity in protecting data, infrastructure, and public trust.
-</p>
+                    <p class="text-lg text-gray-200">Welcome to our look at significant cyberattacks on companies across North America, a region heavily impacted by sophisticated digital threats. These cases highlight the critical importance of cybersecurity in protecting data, infrastructure, and public trust.</p>
                 </div>
 			</div>
 		</div>
