modified african companies links

--- a/continents/africa/libya-telecom-technology.html
+++ b/continents/africa/libya-telecom-technology.html
@@ -5,7 +5,7 @@
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
 		<title>Libya Telecom & Technology</title>
 		<script src='https://cdn.tailwindcss.com'></script>
-		<link rel="stylesheet" href="../assets/css/fonts.css">
+		<link rel="stylesheet" href="../../assets/css/fonts.css">
 	</head>
 	<body class="text-white text-roboto">
 		<div class="min-h-screen bg-[#0b0f2a] bg-[radial-gradient(circle_at_top_right,_rgba(0,159,183,0.3)_0%,_transparent_60%),_radial-gradient(circle_at_bottom_left,_rgba(0,159,183,0.3)_0%,_transparent_60%)]">
@@ -14,7 +14,7 @@
                 <div class="w-full p-4 flex items-center justify-between">
                     <div class="flex items-center space-x-4 md:w-auto w-full justify-between">
                         <div class="flex items-center space-x-4">
-                            <img src="../assets/logo.svg" class="w-14 h-14 text-black">
+                            <img src="../../assets/logo.svg" class="w-14 h-14 text-black">
                             <h4 class="text-2xl">ThreatScope</h4>
                         </div>
                     </div>
@@ -47,7 +47,7 @@
                 dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500 pb-10">
                     <ul class="space-y-2 text-left">
                         <li class="flex items-center space-x-4 p-4">
-                            <img src="../assets/logo.svg" class="w-14 h-14">
+                            <img src="../../assets/logo.svg" class="w-14 h-14">
                             <h4 class="text-2xl">ThreatScope</h4>
                         </li>
     
@@ -288,13 +288,13 @@
 			<div class="mt-24 max-w-5xl mx-auto">
                 <div class="space-y-4">
                     <div class="flex items-center text-gray-300 space-x-2">
-                        <a class="text-sm" href="#">Companies Affected</a>
+                        <a class="text-sm" href="../../companies-affected.html">Companies Affected</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="#" class="text-sm">Famous Cyber Attacked Companies</a>
+                        <a href="../../famous-cyber-attacked-companies.html" class="text-sm">Famous Cyber Attacked Companies</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="../continents/africa.html" class="text-sm">Africa</a>
+                        <a href="../africa.html" class="text-sm">Africa</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="../companies-africa/Libya Telecom & Technology.html" class="text-sm">Libya Telecom & Technology</a>
+                        <a href="#" class="text-sm">Libya Telecom & Technology</a>
                     </div>
                     <h4 class="font-semibold text-5xl">Libya Telecom & Technology</h4>
                     <div class="flex items-center space-x-6 mt-2 text-gray-300">
@@ -303,7 +303,7 @@
                         <a href="#data-compromised">Data Compromised</a>
                     </div>
                 </div>
-                <img src="../assets/picture-africa/libya.png" class="w-full h-96 mt-10 object-cover rounded-lg ">
+                <img src="../../assets/picture-africa/libya.png" class="w-full h-96 mt-10 object-cover rounded-lg ">
                 
 			</div>
 		</div>
@@ -362,7 +362,7 @@
             <div class="max-w-6xl mx-auto border p-6 rounded md:flex block justify-between bg-indigo-950 border-indigo-900">
                 <div>
                     <div class="flex items-center space-x-4">
-                        <img src="../assets/logo.svg" class="h-10 w-10" alt="Logo" />
+                        <img src="../../assets/logo.svg" class="h-10 w-10" alt="Logo" />
                         <h4 class="text-3xl font-medium">ThreatScope</h4>
                     </div>
                     <p class="text-gray-400 text-sm mt-2">© 2024 | All rights reserved.</p>
@@ -399,6 +399,6 @@
             </div>
         </footer>
 		</div>
-		<script src="../assets/js/main.js"></script>
+		<script src="../../assets/js/main.js"></script>
 	</body>
 </html>
